# python-usd-viewer

./: .gitignore  .pre-commit-config.yaml  AUTHORS  CHANGELOG.md  CNAME  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  exploration.md  index.html  pyproject.toml  readme.md  requirements.txt  robots.txt  sitemap.xml  versions.json  viewer.py
.github/: dependabot.yml  labeler.yml
.github/workflows/: ci-main.yml  ci-pr.yml  ci-release.yml  cicd.yml  label.yml
doc/: make.bat
doc/changelog.d/: 27.miscellaneous.md  28.miscellaneous.md  29.miscellaneous.md  35.miscellaneous.md  38.miscellaneous.md  40.maintenance.md  41.maintenance.md  42.maintenance.md  43.maintenance.md  46.maintenance.md  49.fixed.md  51.dependencies.md  53.maintenance.md  54.maintenance.md  56.dependencies.md  58.maintenance.md  59.dependencies.md
doc/source/: changelog.rst  conf.py  index.rst
doc/source/changelog/: 26.miscellaneous.md  27.miscellaneous.md  28.miscellaneous.md  29.miscellaneous.md  30.miscellaneous.md  35.miscellaneous.md
doc/source/getting_started/: index.rst
doc/source/user_guide/: index.rst
doc/styles/config/vocabularies/ANSYS/: accept.txt
examples/: 00-view-usd.py  01-vtk-asset-resolver.py  02-convert-types.py  README.rst  display_color_vtk.usda  warp_demo_mesh.usda
src/ansys/tools/usdviewer/: README.md  __init__.py  _vtk_converter.py  asset_resolver.py  autosetup.py  viewer.py  vtk_converter.py
tests/: conftest.py  sphere.vtk  test_autosetup.py  test_conversion.py  test_viewer.py
version/: index.html
version/0.1/: genindex.html  index.html  search.html  searchindex.js  sg_execution_times.html
version/0.1/_downloads/33c6b7d7de07a6e8fa749363bebdc3cd/: 00-view-usd.ipynb
version/0.1/_downloads/d7aa1e53b657fb37cdd15abc35a3cb44/: 01-vtk-asset-resolver.ipynb
version/0.1/_sources/: index.rst.txt  sg_execution_times.rst.txt
version/0.1/_sources/api/: index.rst.txt
version/0.1/_sources/api/ansys/tools/usdviewer/viewer/: Widget.rst.txt  index.rst.txt
version/0.1/_sources/examples/: 01-vtk-asset-resolver.rst.txt  02-convert-types.rst.txt
version/0.1/_static/: search.json
version/0.1/api/ansys/tools/usdviewer/: index.html
version/0.1/api/ansys/tools/usdviewer/autosetup/: index.html
version/0.1/api/ansys/tools/usdviewer/viewer/: USDViewer.html  Widget.html
version/0.1/api/ansys/tools/usdviewer/vtk_converter/: index.html
version/0.1/examples/: 01-vtk-asset-resolver.html  02-convert-types.html  sg_execution_times.html
version/dev/: changelog.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
version/dev/_downloads/33c6b7d7de07a6e8fa749363bebdc3cd/: 00-view-usd.ipynb
version/dev/_downloads/794af20ed44b91ccdcbbade1eabae03d/: 02-convert-types.ipynb
version/dev/_downloads/d7aa1e53b657fb37cdd15abc35a3cb44/: 01-vtk-asset-resolver.ipynb
version/dev/_sources/api/ansys/tools/usdviewer/: index.rst.txt
version/dev/_sources/api/ansys/tools/usdviewer/vtk_converter/: index.rst.txt
version/dev/_sources/getting_started/: index.rst.txt
version/dev/_static/: search.json
version/dev/api/: index.html
version/dev/api/ansys/tools/usdviewer/: index.html
version/dev/api/ansys/tools/usdviewer/autosetup/: index.html
version/dev/api/ansys/tools/usdviewer/viewer/: USDViewer.html  Widget.html  index.html
version/dev/api/ansys/tools/usdviewer/vtk_converter/: VTKConverter.html  index.html
version/dev/examples/: 00-view-usd.html  01-vtk-asset-resolver.html  02-convert-types.html  index.html  sg_execution_times.html
version/dev/getting_started/: index.html
version/dev/user_guide/: index.html
version/stable/: changelog.html  index.html  objects.inv  py-modindex.html
version/stable/_downloads/794af20ed44b91ccdcbbade1eabae03d/: 02-convert-types.ipynb
version/stable/_downloads/83049b047492b1094090dd18e8147901/: 01-vtk-asset-resolver.py
version/stable/_downloads/daa924063eb0ca3f9e5594b202f8d2cf/: 02-convert-types.py
version/stable/_sources/api/ansys/tools/usdviewer/autosetup/: index.rst.txt
version/stable/_sources/api/ansys/tools/usdviewer/viewer/: USDViewer.rst.txt
version/stable/_sources/api/ansys/tools/usdviewer/vtk_converter/: VTKConverter.rst.txt
version/stable/_sources/examples/: 00-view-usd.rst.txt  index.rst.txt  sg_execution_times.rst.txt
version/stable/api/: index.html
version/stable/api/ansys/tools/usdviewer/viewer/: index.html
version/stable/api/ansys/tools/usdviewer/vtk_converter/: VTKConverter.html
version/stable/examples/: 00-view-usd.html  index.html
version/stable/getting_started/: index.html
version/stable/user_guide/: index.html
